ChangeLog

Upcoming version for TYPO3 13
[TASK]    Update requirements for TYPO3 13
[TASK]    Migrate plugin registration
[TASK]    Remove obsolete ext_tables.php
[TASK]    Migrate registration of status dashboard widget, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/12.0/Breaking-96812-NoFrontendTypoScriptBasedTemplateOverridesInTheBackend.html#widget-registration-using-services-yaml
[TASK]    Don't use QueryBuilder->add() anymore because it has been removed, https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/13.0/Breaking-102875-QueryBuilderChanges.html
[TASK]    Remove language-related function from AbstractPlugin and use custom translate function instead
[TASK]    Migrate database queries to use type constants from Connection instead of PDO, https://docs.typo3.org/m/typo3/reference-coreapi/main/en-us/ApiOverview/Database/QueryBuilder/Index.html#database-query-builder-create-named-parameter
[TASK]    Remove obsolete code for TYPO3 11 and below
[TASK]    Migrate FlexfForm definition
[TASK]    Migrate database queries
[TASK]    Set fallback values for indexer starting pages
[TASK]    Use FileResourceFactory instead of fileRepository->findFileReferenceByUid()
[TASK]    Don't use deprecated method getTwoLetterIsoCode() anymore, replace with getTypo3Language() and getWebsiteTitle()

Version 5.5.2, 23 August 2024
[BUGFIX]  Fix cropping if "resultChars" is empty. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/242
[BUGFIX]  Fix regression in page indexer if translated page is not available. Thanks to Jens Vollmer. https://github.com/tpwd/ke_search/issues/243

Version 5.5.1, 16 August 2024
[FEATURE] Add garbage collection for statistics table
[BUGFIX]  Use correct table names for query builder or connection. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/228
[BUGFIX]  Respect configured Doktypes while Auto-Tagging. Thanks to magicHatOfTYPO3. https://github.com/tpwd/ke_search/pull/235