@@ -1,6 +1,8 @@
 ChangeLog
 
 Upcoming version for TYPO3 13
+[!!!]     This version drops support for TYPO3 11.
+[!!!]     Plugins are now registered as content elements, not as general plugins ("list_type"). A migration wizard is provided. You may adapt your configuration for content element restrictions e.g. EXT:content_defender or similar. See https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/13.4/Deprecation-105076-PluginContentElementAndPluginSubTypes.html#migration
 [TASK]    Update requirements for TYPO3 13
 [TASK]    Migrate plugin registration
 [TASK]    Remove obsolete ext_tables.php
